fix: Add validation to CBus managers